--- a/src/components/styles/chart.css
+++ b/src/components/styles/chart.css
@@ -5,3 +5,13 @@
   font-size: 1.5em; 
   font-weight: bold;
 }
+
+.axis path, .axis line {
+  fill: none;
+  stroke: #333;
+}
+.axis .grid-line {
+  stroke: #000;
+  shape-rendering: crispedges;
+  stroke-opacity: 0.2;
+}
