Added header with checkbox and select

--- a/src/pages/styles/barchart.css
+++ b/src/pages/styles/barchart.css
@@ -1,7 +1,12 @@
-.barchart-body {
+.barchart {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
+}
+.barchart-body {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: flex-start;
+    align-items: flex-start;
+    /* height: 100vh; */
 }
